test/2-errors/trace.ploy
<let-fn f [-n]
  <_if n
    <scope
      { (self (isub n 1))
        void}>
    unbound>>

(f 5)
